# web_fs

./: Cargo.toml  README.md
src/: lib.rs
src/native/: mod.rs
src/wasm/: mod.rs
src/wasm/functions/: copy.rs  create_dir.rs  create_dir_all.rs  metadata.rs  mod.rs  read.rs  read_dir.rs  read_to_string.rs  remove_dir.rs
src/wasm/types/: file.rs  file_type.rs  metadata.rs  mod.rs  read_dir.rs
