[package]
name = "web_fs"
version = "0.1.0"
workspace = "../.."
edition = "2021"

[features]

[dependencies]


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = { version = "0.5" }
web-sys = { version = "0.3", features = ['Document', 'HtmlCollection', 'HtmlCanvasElement', 'Window'] }